--- a/self-example/ChangeShape/index.html
+++ b/self-example/ChangeShape/index.html
@@ -17,19 +17,18 @@
         </div>
         <div class="option">
             <div class="option-color">
-                <button id="color">color</button>
-                <ul>
-                    <li><button onclick='ChangeColor("red")'>Red</button></li>
-                    <li><button onclick='ChangeColor("green")'>green</button></li>
-                    <li><button onclick='ChangeColor("blue")'>blue</button></li>
-                </ul>
+                <h5>color</h5>
+                <input type="color" >
+                <button onclick='ChangeColor("red")'>Red</button>
+                <button onclick='ChangeColor("green")'>green</button>
+                <button onclick='ChangeColor("blue")'>blue</button>
             </div>
             <div class="option-shape">
-                <ul>
-                    <li><button onclick='ChangeShape("square")'>Square</button></li>
-                    <li><button onclick='ChangeShape("circle")'>Circle</button></li>
-                    <li><button onclick='ChangeShape("oval")'>oval</button></li>
-                </ul>
+                <h5>color</h5>
+                <button onclick='ChangeShape("square")'>Square</button>
+                <button onclick='ChangeShape("circle")'>Circle</button>
+                <button onclick='ChangeShape("oval")'>oval</button>
+
             </div>
         </div>
     </div>
