--- a/js/practice/stopwatch/index.html
+++ b/js/practice/stopwatch/index.html
@@ -15,9 +15,9 @@
     <div id="container">
         <div id="time">00:00</div>
         <div id="control">
-            <button id="start" onclick="initTimer()">start</button>
-            <button id="stop">stop</button>
-            <button id="reset">reset</button>
+            <button id="start" onclick="startTimer()">start</button>
+            <button id="stop" onclick="stopTimer()">stop</button>
+            <button id="reset" onclick="resetTimer()">reset</button>
         </div>
     </div>
     <script src="index.js"></script>
